# ai-tools-t-bank

./: README.md
.github/workflows/: main.yml
hw-6-vibe-code/: README.md
hw-6-vibe-code/.github/workflows/: ci.yml
hw-6-vibe-code/prompts/: claude_web_2_stresstests.md  cursor_4_part_refactoring.md  cursor_5_ci_cd_part1.md  cursor_5_ci_cd_part2.md  gemini_prompt_generate.md
hw-6-vibe-code/python3-app/: .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  main.py  pyproject.toml  requirements.txt  stresstest_guide.md  test_main.py
